zero-schema-macros/tests/ui/fail/71_nested_symbolic_zero_array.stderr
error[E0080]: evaluation of `__zero_schema_support_child_2e2061314a660bde::ChildSupport::<0>::__ZERO_SCHEMA_NONZERO_ARRAYS` failed
  --> tests/ui/fail/71_nested_symbolic_zero_array.rs:10:1
   |
10 | #[zero]
   | ^^^^^^^ the evaluated program panicked at 'zero-length schema arrays are unsupported', $DIR/tests/ui/fail/71_nested_symbolic_zero_array.rs:10:1
   |
   = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant encountered
  --> tests/ui/fail/71_nested_symbolic_zero_array.rs:10:1
   |
10 | #[zero]
   | ^^^^^^^
   |
   = note: this note originates in the attribute macro `zero` (in Nightly builds, run with -Z macro-backtrace for more info)

note: the above error was encountered while instantiating `fn <__zero_schema_support_child_2e2061314a660bde::ChildSupport<0> as zero_schema::__private::SchemaSupport>::validate`
 --> $WORKSPACE/src/__private.rs
  |
  |         Self::validate(input)?;
  |         ^^^^^^^^^^^^^^^^^^^^^
